fix: mobile menu overflow, hero height and nav spacing

--- a/src/css/sections/hero.css
+++ b/src/css/sections/hero.css
@@ -27,13 +27,16 @@
 }
 .hero__title {
   font-family: 'Lilita One', sans-serif;
+  line-height: 1.23;
   font-weight: 400;
   font-size: 40px;
   text-align: left;
+  padding: 0;
 }
 
 .hero__subtitle {
   font-family: 'Lilita One', sans-serif;
+  line-height: 1.2;
   font-weight: 400;
   font-size: 32px;
   padding: 0;
@@ -72,7 +75,7 @@
   filter: blur(5px);
   left: 50%;
   transform: translateX(-50%);
-  bottom: -11px;
+  bottom: -2px;
   z-index: 2;
 }
 .hero__character-caption {
@@ -80,6 +83,7 @@
 }
 .hero__text {
   font-family: 'Nunito', sans-serif;
+  line-height: 1.2;
   font-weight: 800;
   font-size: 24px;
 }
